--- a/contactus.html
+++ b/contactus.html
@@ -4,7 +4,7 @@
 
 <!-- Basic Page Head -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Ayyo Village Hotel and Restaurant</title>
+<title>Ayyo Village Hotel</title>
 <meta name="description" content="Responsive Hotel Template">
 <meta name="author" content="Loco Theme - locotheme.com">
 <meta name="keywords" content="hotel, hostel, motel, guesthouse, booking, accommodation, inn, spa, resort, travel, holiday, tourism, vacation, bootstrap, responsive">
@@ -61,7 +61,7 @@
     <!-- Header Top -->
     <div class="header-top">
         <div class="wrapper">
-            <div class="header-contact">
+            <!-- div class="header-contact">
                 <ul>
                     <li>+254 (720) 495 007</li>
                     <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -69,7 +69,7 @@
                     <li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
                 </ul>
-            </div>
+            </div -->
             <div class="header-lang">
                 <ul>
                     <li class="active"><a href="#">EN</a></li>
@@ -91,26 +91,31 @@
                     <li class="sub"><a href="rooms.html">ROOMS</a>
                         <ul>
                             <li><a href="rooms.html">ROOMS LISTING</a></li>
-                            <li><a href="rooms-detail.html">ROOMS DETAIL</a></li>
+                            <!-- li><a href="rooms-detail.html">ROOMS DETAIL</a></li -->
                         </ul>
                     </li>
                     <li><a href="services.html">SERVICES</a></li>
                 </ul>
                 <ul class="nav-right">
                     <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="booking.html">BOOKING</a></li>
-                    <li class="sub"><a href="blog.html">BLOG</a>
-                        <ul>
+                    <li id="bookingButton"><a href="#">BOOKING</a></li>
+                    <li id="blogButton"><a href="#">OFFERS</a></li>
+                        <!-- ul>
                             <li><a href="blog.html">BLOG LISTING</a></li>
                             <li><a href="blog-single.html">BLOG SINGLE PHOTO</a></li>
                             <li><a href="blog-single-gallery.html">BLOG SINGLE GALLERY</a></li>
                             <li><a href="blog-single-vimeo.html">BLOG SINGLE VIMEO</a></li>
                             <li><a href="blog-single-youtube.html">BLOG SINGLE YOUTUBE</a></li>
-                        </ul>
+                        </ul -->
                     </li>
                     <li><a href="contactus.html">CONTACT</a></li>
                 </ul>
             </div>
+
+            <div id="popup" class="popup">
+                <p>Coming soon!</p>
+            </div>
+            
             <div class="header-toggle">
                 <i class="fa fa-bars"></i>
             </div>
@@ -130,7 +135,7 @@
                 <!-- Title -->
                 <h5>GET IN TOUCH WITH US</h5>
                 <h1>Contact Page</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget commodo orci. Integer varius nibh eu mattis porta. Pellentesque dictum sem eget cursus semper. Nullam quis blandit lorem. Morbi blandit orci urna, eu congue magna faucibus at. In bibendum in mauris nec ultrices. Nunc et magna velit.</p>
+                <p>Have any questions or need assistance? Don't hesitate to contact us. We're here to help!</p>
                 <!-- Title End -->
                 <!-- Breadcrumb -->
                 <div class="widget-breadcrumb">
@@ -152,7 +157,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <!-- Contact Info -->
-                    <div class="widget-contact-info">
+                    <!-- div class="widget-contact-info">
                         <ul>
                             <li>
                                 <h5>AYYO VILLAGE</h5>
@@ -165,7 +170,7 @@
                             <li>
                                 <h5>RESERVATION</h5>
                                 <ul>
-                                    <li>Mr. Abduba Dima - Director of Reservation</li>
+                                    <li>Head of Reservation</li>
                                     <li>Phone: +254 (720) 100 200  Fax: +254 (720) 100 200</li>
                                     <li><a href="mailto:reservation@thegrandiumhotel.com">reservation@ayyovillageisiolo.com</a></li>
                                 </ul>
@@ -179,7 +184,7 @@
                                 </ul>
                             </li>
                         </ul>
-                    </div>
+                    </div -->
                     <!-- Contact Info End -->
                 </div>
                 <div class="col-lg-6">
@@ -317,7 +322,7 @@
                 <img src="https://res.cloudinary.com/drcqfiqpv/image/upload/v1664873109/LOGO_brown_WHITE_Small_II_k4u6gj.png" alt="The Ayyo Village Hotel">
             </div>
             <div class="footer-copyright">
-                <p>COPYRIGHT © Ayyo Village Hotel & Restaurant.</p>
+                <p>COPYRIGHT © Ayyo Village Hotel.</p>
             </div>
             <div class="footer-contact">
                 <ul>
