--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 
 <!-- Basic Page Head -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Ayyo Village Hotel and Restaurant</title>
+<title>Ayyo Village Hotel</title>
 <meta name="description" content="Responsive Hotel Template">
 <meta name="author" content="Loco Theme - locotheme.com">
 <meta name="keywords" content="hotel, hostel, motel, guesthouse, booking, accommodation, inn, spa, resort, travel, holiday, tourism, vacation, bootstrap, responsive">
@@ -61,7 +61,7 @@
     <!-- Header Top -->
     <div class="header-top">
         <div class="wrapper">
-            <div class="header-contact">
+            <!-- div class="header-contact">
                 <ul>
                     <li>+254 (720) 495 007</li>
                     <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -69,7 +69,7 @@
                     <li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
                 </ul>
-            </div>
+            </div -->
             <div class="header-lang">
                 <ul>
                     <li class="active"><a href="#">EN</a></li>
@@ -91,26 +91,31 @@
                     <li class="sub"><a href="rooms.html">ROOMS</a>
                         <ul>
                             <li><a href="rooms.html">ROOMS LISTING</a></li>
-                            <li><a href="rooms-detail.html">ROOMS DETAIL</a></li>
+                            <!-- li><a href="rooms-detail.html">ROOMS DETAIL</a></li -->
                         </ul>
                     </li>
                     <li><a href="services.html">SERVICES</a></li>
                 </ul>
                 <ul class="nav-right">
                     <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="booking.html">BOOKING</a></li>
-                    <li class="sub"><a href="blog.html">BLOG</a>
-                        <ul>
+                    <li id="bookingButton"><a href="#">BOOKING</a></li>
+                    <li id="blogButton"><a href="#">OFFERS</a></li>
+                        <!-- ul>
                             <li><a href="blog.html">BLOG LISTING</a></li>
                             <li><a href="blog-single.html">BLOG SINGLE PHOTO</a></li>
                             <li><a href="blog-single-gallery.html">BLOG SINGLE GALLERY</a></li>
                             <li><a href="blog-single-vimeo.html">BLOG SINGLE VIMEO</a></li>
                             <li><a href="blog-single-youtube.html">BLOG SINGLE YOUTUBE</a></li>
-                        </ul>
+                        </ul -->
                     </li>
                     <li><a href="contactus.html">CONTACT</a></li>
                 </ul>
             </div>
+
+            <div id="popup" class="popup">
+                <p>Coming soon!</p>
+            </div>
+            
             <div class="header-toggle">
                 <i class="fa fa-bars"></i>
             </div>
@@ -154,8 +159,8 @@
                 <ul>
                     <li class="active"><a href="#" data-filter="*">ALL PHOTOS</a></li>
                     <li><a href="#" data-filter=".rooms">ROOMS</a></li>
-                    <li><a href="#" data-filter=".skybar">ENTERTAINMENT &amp; LOUNGE</a></li>
-                    <li><a href="#" data-filter=".welness">WELNESS &amp; SPA</a></li>
+                    <!-- li><a href="#" data-filter=".skybar">ENTERTAINMENT</a></li -->
+                    <!-- li><a href="#" data-filter=".welness">WELNESS &amp; SPA</a></li -->
                     <li><a href="#" data-filter=".restaurant">RESTAURANT</a></li>
                     <li><a href="#" data-filter=".wedding">WEDDING</a></li>
                     <li><a href="#" data-filter=".conference">CONFERENCE</a></li>
@@ -167,57 +172,57 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item rooms">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-1.jpg" data-background="assets/img/photo-gallery-1.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904906/Gallery/Photo-gallery-2_rooms.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904906/Gallery/Photo-gallery-2_rooms.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item skybar restaurant">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-6.jpg" data-background="assets/img/photo-gallery-6.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905111/Gallery/Photo-gallery-1_restaurant.jpg" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905111/Gallery/Photo-gallery-1_restaurant.jpg" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item skybar">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-7.jpg" data-background="assets/img/photo-gallery-7.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905048/Gallery/Photo-gallery-21_wmvxid.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905048/Gallery/Photo-gallery-21_wmvxid.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item skybar restaurant">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-8.jpg" data-background="assets/img/photo-gallery-8.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904914/Gallery/Photo-gallery-4_ubulvl.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904914/Gallery/Photo-gallery-4_ubulvl.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item skybar restaurant">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-9.jpg" data-background="assets/img/photo-gallery-9.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905119/Gallery/Photo-gallery-40_b5bfe8.jpg" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905119/Gallery/Photo-gallery-40_b5bfe8.jpg" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item rooms">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-2.jpg" data-background="assets/img/photo-gallery-2.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904919/Gallery/Photo-gallery-3_psgeak.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904919/Gallery/Photo-gallery-3_psgeak.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item conference">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-10.jpg" data-background="assets/img/photo-gallery-10.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905073/Gallery/Photo-gallery-28_ggkjrq.jpg" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905073/Gallery/Photo-gallery-28_ggkjrq.jpg" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item conference">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-11.jpg" data-background="assets/img/photo-gallery-11.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905073/Gallery/Photo-gallery-28_ggkjrq.jpg" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905073/Gallery/Photo-gallery-28_ggkjrq.jpg" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item wedding restaurant conference">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-12.jpg" data-background="assets/img/photo-gallery-12.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905086/Gallery/Photo-gallery-1_conference.jpg" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905086/Gallery/Photo-gallery-1_conference.jpg" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item wedding">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-13.jpg" data-background="assets/img/photo-gallery-13.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905104/Gallery/Photo-gallery-2_wedding.jpg" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905104/Gallery/Photo-gallery-2_wedding.jpg" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item rooms">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-3.jpg" data-background="assets/img/photo-gallery-3.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905009/Gallery/Photo-gallery-16_a35gx0.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905009/Gallery/Photo-gallery-16_a35gx0.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item welness">
@@ -232,17 +237,17 @@
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item welness wedding">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-16.jpg" data-background="assets/img/photo-gallery-16.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904919/Gallery/Photo-gallery-1_wedding.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904919/Gallery/Photo-gallery-1_wedding.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item welness wedding">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-17.jpg" data-background="assets/img/photo-gallery-17.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905070/Gallery/Photo-gallery-25_nyerfn.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706905070/Gallery/Photo-gallery-25_nyerfn.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 isotope-item rooms">
                         <div class="gallery-item">
-                            <a href="assets/img/photo-gallery-4.jpg" data-background="assets/img/photo-gallery-4.jpg" title="Photo Name" class="popup-gallery"></a>
+                            <a href="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904973/Gallery/Photo-gallery-11_ozgb0z.png" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706904973/Gallery/Photo-gallery-11_ozgb0z.png" title="Photo Name" class="popup-gallery"></a>
                         </div>
                     </div>
                 </div>
@@ -293,7 +298,7 @@
                 <img src="https://res.cloudinary.com/drcqfiqpv/image/upload/v1664873109/LOGO_brown_WHITE_Small_II_k4u6gj.png" alt="The Ayyo Village Hotel">
             </div>
             <div class="footer-copyright">
-                <p>COPYRIGHT © Ayyo Village Hotel & Restaurant.</p>
+                <p>COPYRIGHT © Ayyo Village Hotel.</p>
             </div>
             <div class="footer-contact">
                 <ul>
