--- a/rooms-detail.html
+++ b/rooms-detail.html
@@ -98,15 +98,15 @@
                 </ul>
                 <ul class="nav-right">
                     <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="booking.html">BOOKING</a></li>
-                    <li class="sub"><a href="blog.html">BLOG</a>
-                        <ul>
+                    <li id="bookingButton"><a href="#">BOOKING</a></li>
+                    <li id="blogButton"><a href="#">OFFERS</a></li>
+                        <!-- ul>
                             <li><a href="blog.html">BLOG LISTING</a></li>
                             <li><a href="blog-single.html">BLOG SINGLE PHOTO</a></li>
                             <li><a href="blog-single-gallery.html">BLOG SINGLE GALLERY</a></li>
                             <li><a href="blog-single-vimeo.html">BLOG SINGLE VIMEO</a></li>
                             <li><a href="blog-single-youtube.html">BLOG SINGLE YOUTUBE</a></li>
-                        </ul>
+                        </ul -->
                     </li>
                     <li><a href="contactus.html">CONTACT</a></li>
                 </ul>
@@ -130,7 +130,7 @@
                 <!-- Title -->
                 <h5>EXPERIENCE THE FREEDOM</h5>
                 <h1>Single Room</h1>
-                <p>Welcome to our Single Room, where comfort meets elegance. Immerse yourself in a tranquil space designed for your ultimate relaxation.</p>
+                <p>Welcome to our cozy Single Room, where comfort meets elegance. Relax in this peaceful space designed just for you.</p>
                 <!-- Title End -->
                 <!-- Breadcrumb -->
                 <div class="widget-breadcrumb">
@@ -187,7 +187,7 @@
                         </div>
                         <div class="col-md-4">
                             <!-- Room Booking -->
-                            <div class="room-booking">
+                            <!-- div class="room-booking">
                                 <h5>BOOKING</h5>
                                 <h2>Book a Room</h2>
                                 <div class="data-form">
@@ -233,22 +233,22 @@
                                         </div>
                                     </form>
                                 </div>
-                            </div>
+                            </div -->
                             <!-- Room Booking End -->
                             <!-- Room Features -->
                             <div class="room-features">
                                 <h5>FEATURES</h5>
                                 <h2>Room Features</h2>
                                 <ul>
-                                    <li><i class="fa fa-check"></i> BREAKFAST</li>
-                                    <li><i class="fa fa-check"></i> WI-FI</li>
-                                    <li><i class="fa fa-check"></i> HAIR DRYER</li>
-                                    <li><i class="fa fa-check"></i> LCD TV</li>
-                                    <li><i class="fa fa-check"></i> SHOWER AND TAB</li>
-                                    <li><i class="fa fa-check"></i> SECURITY SYSTEM</li>
-                                    <li><i class="fa fa-check"></i> AIR CONDITIONING</li>
-                                    <li><i class="fa fa-check"></i> MINI LOUNGE</li>
-                                    <li><i class="fa fa-check"></i> TEA AND COFFEE SET</li>
+                                <li><i class="fa fa-check"></i> BREAKFAST</li>
+                                <li><i class="fa fa-check"></i> WI-FI</li>
+                                <!-- li><i class="fa fa-check"></i> HAIR DRYER</li -->
+                                <li><i class="fa fa-check"></i> LCD TV</li>
+                                <li><i class="fa fa-check"></i> SHOWER AND TAB</li>
+                                <!-- li><i class="fa fa-check"></i> SECURITY SYSTEM</li -->
+                                <!-- li><i class="fa fa-check"></i> AIR CONDITIONING</li -->
+                                <!-- li><i class="fa fa-check"></i> MINI BAR</li -->
+                                <!-- li><i class="fa fa-check"></i> TEA AND COFFEE SET</li -->
                                 </ul>
                             </div>
                             <!-- Room Features End -->
