--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 
 <!-- Basic Page Head -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Ayyo Village Hotel and Restaurant</title>
+<title>Ayyo Village Hotel</title>
 <meta name="description" content="Responsive Hotel Template">
 <meta name="author" content="Loco Theme - locotheme.com">
 <meta name="keywords" content="hotel, hostel, motel, guesthouse, booking, accommodation, inn, spa, resort, travel, holiday, tourism, vacation, bootstrap, responsive">
@@ -91,22 +91,22 @@
                     <li class="sub"><a href="rooms.html">ROOMS</a>
                         <ul>
                             <li><a href="rooms.html">ROOMS LISTING</a></li>
-                            <li><a href="rooms-detail.html">ROOMS DETAIL</a></li>
+                            <!-- li><a href="rooms-detail.html">ROOMS DETAIL</a></li -->
                         </ul>
                     </li>
                     <li><a href="services.html">SERVICES</a></li>
                 </ul>
                 <ul class="nav-right">
                     <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="booking.html">BOOKING</a></li>
-                    <li class="sub"><a href="blog.html">BLOG</a>
-                        <ul>
+                    <li id="bookingButton"><a href="#">BOOKING</a></li>
+                    <li id="blogButton"><a href="#">OFFERS</a></li>
+                        <!-- ul>
                             <li><a href="blog.html">BLOG LISTING</a></li>
                             <li><a href="blog-single.html">BLOG SINGLE PHOTO</a></li>
                             <li><a href="blog-single-gallery.html">BLOG SINGLE GALLERY</a></li>
                             <li><a href="blog-single-vimeo.html">BLOG SINGLE VIMEO</a></li>
                             <li><a href="blog-single-youtube.html">BLOG SINGLE YOUTUBE</a></li>
-                        </ul>
+                        </ul -->
                     </li>
                     <li><a href="contactus.html">CONTACT</a></li>
                 </ul>
@@ -130,7 +130,7 @@
                 <!-- Title -->
                 <h5>EXPLORE OUR FACILITIES</h5>
                 <h1>Services Page</h1>
-                <p>Discover the array of exceptional services offered at Ayyo Village. From exquisite dining experiences to state-of-the-art conference facilities, our diverse range of offerings is designed to make your stay unforgettable. Learn more about each service below and plan your visit to indulge in the luxury and comfort we provide.</p>
+                <p>Explore the fantastic services at Ayyo Village, from fine dining to conference spaces. Our variety of offerings ensures a memorable stay. Dive into details below and prepare to enjoy the luxury and comfort we offer.</p>
                 <!-- Title End -->
                 <!-- Breadcrumb -->
                 <div class="widget-breadcrumb">
@@ -151,7 +151,7 @@
         <div class="wrapper-inner">
             <!-- Services List -->
             <div class="widget-services-list">
-                <div class="services-item">
+                <!-- div class="services-item">
                     <div class="item-photo">
                         <div class="photo-big" data-background="assets/img/photo-services-1-1.jpg"></div>
                         <div class="photo-small" data-background="assets/img/photo-services-1-2.jpg"></div>
@@ -163,47 +163,47 @@
                         <h2>Unwind in Style</h2>
                         <p>Experience the heights of luxury at our Sky Bar & Lounge. Enjoy breathtaking views, handcrafted cocktails, and a sophisticated ambiance that elevates your evening.</p>
                     </div>
-                </div>
+                </div -->
                 <div class="services-item">
                     <div class="item-photo">
-                        <div class="photo-big" data-background="assets/img/photo-services-2-1.jpg"></div>
-                        <div class="photo-small" data-background="assets/img/photo-services-2-2.jpg"></div>
+                        <div class="photo-big" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706893845/Facilities_PrivateDinning.png"></div>
+                        <div class="photo-small" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706893845/Facilities_PrivateDinning.png"></div>
                         <a href="#" class="btn btn-default">LEARN MORE</a>
                     </div>
                     <div class="item-desc">
                         <h5>OUR FACILITIES</h5>
                         <h5>PRIVATE DINING</h5>
                         <h2>Culinary Excellence</h2>
-                        <p>Indulge in a private dining experience curated by our talented chefs. Immerse yourself in exquisite flavors and impeccable service for a memorable gastronomic journey.</p>
+                        <p>Treat yourself to a special dining experience prepared by our chefs. Enjoy delicious food and great service for a memorable meal.</p>
                     </div>
                 </div>
                 <div class="services-item">
                     <div class="item-photo">
-                        <div class="photo-big" data-background="assets/img/photo-services-3-1.jpg"></div>
-                        <div class="photo-small" data-background="assets/img/photo-services-3-2.jpg"></div>
+                        <div class="photo-big" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706894466/Facilities_ConferenceHalls.png"></div>
+                        <div class="photo-small" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706894466/Facilities_ConferenceHalls.png"></div>
                         <a href="#" class="btn btn-default">LEARN MORE</a>
                     </div>
                     <div class="item-desc">
                         <h5>OUR FACILITIES</h5>
                         <h5>CONFERENCE & EVENTS</h5>
                         <h2>Meetings Redefined</h2>
-                        <p>Host your conferences and events in style. Our state-of-the-art facilities and dedicated team ensure a seamless and productive experience for all your business needs.</p>
+                        <p>Plan your conferences and events with us. Our modern facilities and expert team guarantee a smooth and successful experience for all your business requirements.</p>
                     </div>
                 </div>
                 <div class="services-item">
                     <div class="item-photo">
-                        <div class="photo-big" data-background="assets/img/photo-services-4-1.jpg"></div>
-                        <div class="photo-small" data-background="assets/img/photo-services-4-2.jpg"></div>
+                        <div class="photo-big" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706893838/Facilities_WeddingSpace.png"></div>
+                        <div class="photo-small" data-background="https://res.cloudinary.com/dfwpmwtff/image/upload/v1706893838/Facilities_WeddingSpace.png"></div>
                         <a href="#" class="btn btn-default">LEARN MORE</a>
                     </div>
                     <div class="item-desc">
                         <h5>OUR FACILITIES</h5>
                         <h5>WEDDING VENUE</h5>
                         <h2>Celebrate Love</h2>
-                        <p>Create everlasting memories in our enchanting wedding venue. From intimate ceremonies to grand celebrations, our team ensures every detail is perfect for your special day.</p>
+                        <p>Make unforgettable memories at our beautiful wedding venue. Whether it's an intimate gathering or a grand celebration, our team ensures every detail is perfect for your special day.</p>
                     </div>
                 </div>
-                <div class="services-item">
+                <!-- div class="services-item">
                     <div class="item-photo">
                         <div class="photo-big" data-background="assets/img/photo-services-5-1.jpg"></div>
                         <div class="photo-small" data-background="assets/img/photo-services-5-2.jpg"></div>
@@ -215,8 +215,8 @@
                         <h2>Relax & Rejuvenate</h2>
                         <p>Pamper yourself in our luxurious spa and beauty center. Experience rejuvenating treatments, expert care, and a tranquil atmosphere for the ultimate relaxation.</p>
                     </div>
-                </div>
-                <div class="services-item">
+                </div -->
+                <!-- div class="services-item">
                     <div class="item-photo">
                         <div class="photo-big" data-background="assets/img/photo-services-6-1.jpg"></div>
                         <div class="photo-small" data-background="assets/img/photo-services-6-2.jpg"></div>
@@ -229,7 +229,7 @@
                         <p>Cool off and unwind by our sparkling swimming pool. Whether you're looking for a refreshing swim or a leisurely day by the poolside, we have the perfect oasis for you.</p>
                     </div>
                 </div>
-            </div>
+            </div -->
             <!-- Services List End -->
         </div>
     </div>
@@ -276,7 +276,7 @@
                 <img src="https://res.cloudinary.com/drcqfiqpv/image/upload/v1664873109/LOGO_brown_WHITE_Small_II_k4u6gj.png" alt="The Ayyo Village Hotel">
             </div>
             <div class="footer-copyright">
-                <p>COPYRIGHT © Ayyo Village Hotel & Restaurant.</p>
+                <p>COPYRIGHT © Ayyo Village Hotel</p>
             </div>
             <div class="footer-contact">
                 <ul>
